# alfheimr-server

./: Cargo.toml  README.md  game.rhai  shell.nix
games/: 1d_chess.rhai  all_pawns.rhai  atomic.rhai  horde.rhai  standard.rhai  terachess2.rhai
modules/: default.rhai
src/: args.rs  error.rs  logging.rs  main.rs
src/game/: connection.rs  mod.rs  validation.rs
src/logic/: board.rs  color.rs  game_boards.rs  game_pieces.rs  mod.rs  move_gen.rs  movement.rs  piece.rs  test.rs
src/networking/: client.rs  mod.rs  receiveddata.rs  socketdata.rs  test.rs
src/parsers/: ffen.pest  parlett.pest
src/rules/: board.rs  game.rs  mod.rs  piece.rs
