[package]
name = "alfheimr_server"
version = "0.1.0"
authors = ["Andreas Lehmann-Poulsen", "Joakim Holm <joakimholm@protonmail.com>" ,"Mikkel Hauvgaard <mikkel@hauvgaard.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.14.0"
tokio = { version="^1.0", features = ["full"] }
futures = "^0.3"
futures-util = "^0.3"
displaydoc = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
pest = "2.1.3"
colored = "2"
pest_derive = "2.1.0"
ctrlc = "3.1.8"
structopt = "0.3"
rhai = { version="0.20.0", features = ["unchecked", "serde"] }
simplelog = "^0.7.6"
log = "0.4"
